--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack-dev-server",
-    "build": "webpack -p"
+    "build": "webpack -p",
+    "postinstall": "webpack -p",
+    "start": "node src/server.js"
   },
   "dependencies": {
     "react": "^16.7.0",
